# DungeonLordsBot

./: .gitignore  Build.cmd  CMakeLists.txt  README.md  premake5.lua
Bot/: CMakeLists.txt  DungeonLordsBot.cpp
DlLogger/Logger/inc/: DlLogger.h
DlLogger/Logger/src/: DlLogger.cpp
GameAPI/: CMakeLists.txt
GameAPI/BoardComponents/inc/: Action.h  Effect.h  EffectsFactory.h  EffectsMap.h  Hero.h  HeroesTeam.h  IHero.h  MapTile.h  Monster.h  MonsterCard.h  Trap.h  TrapCard.h
GameAPI/BoardComponents/src/: Action.cpp  Effect.cpp  EffectsFatctory.cpp  EffectsMap.cpp  Hero.cpp  HeroesTeam.cpp  Monster.cpp  MonsterCard.cpp  Trap.cpp  TrapCard.cpp
GameAPI/Components/inc/: Hero.h  HeroesTeam.h  Monster.h  MonsterCard.h  SpellCard.h  SpellEffect.h
GameAPI/Components/src/: Hero.cpp  HeroesTeam.cpp  Monster.cpp  MonsterCard.cpp  SpellCard.cpp  SpellEffect.cpp  Trap.cpp  TrapCard.cpp
GameAPI/Simulation/inc/: Battle.h  BattleRound.h  Effect.h  ITarget.h  SpellsMap.h
GameAPI/Simulation/src/: Action.cpp  Battle.cpp  BattleRound.cpp  EffectsFatctory.cpp  EffectsMap.cpp  SpellsMap.cpp  TagsMap.cpp
GameAPI/inc/: Action.h  BattleRound.h  Effect.h  EffectsFactory.h  EffectsMap.h  Hero.h  HeroesTeam.h  IHero.h  ITarget.h  Monster.h  MonsterCard.h  TagsMap.h  Trap.h  TrapCard.h
GameAPI/src/: Action.cpp  BattleRound.cpp  Effect.cpp  EffectsFatctory.cpp  EffectsMap.cpp  Hero.cpp  HeroesTeam.cpp  Monster.cpp  MonsterCard.cpp  TagsMap.cpp  Trap.cpp  TrapCard.cpp
GameAPITests/: CmakeLists.txt
GameAPITests/inc/: GameAPIMock.h
GameAPITests/src/: CardsTests.cpp  HeroTeamTests.cpp
Logger/: CMakeLists.txt
Logger/inc/: DlLogger.h
Logger/src/: DlLogger.cpp
